bit of a css hack to fix alignment of lists

--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -176,7 +176,7 @@ article {
 	/* Article is understood as a fully-composed document inclusive of header, timestamp, etc.  See Mozilla: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/article */
 	padding: 0 14rem 0 4rem;
 
-	.article-body ul {
+	ul {
 		padding: 0 0 1rem 2rem;		
 	}
 }
